@startuml
skinparam monochrome true
skinparam StateFontName Helvetica
skinparam defaultFontName Monospaced
skinparam defaultFontStyle Bold
skinparam state {
    FontStyle Bold
}
state coins {
COINS --> UNLOCKED : <<automatic>>
COINS --> UNLOCKED : <<automatic>>
COINS --> COINS : COIN
}
state PayingTurnstileFSM {
[*] --> UNLOCKED
LOCKED --> COINS : COIN
LOCKED --> COINS : COIN
UNLOCKED --> UNLOCKED : COIN
UNLOCKED --> LOCKED : PASS
}
@enduml
